# warm_wind

./: CMakeLists.txt  README.md  main.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/warm_wind/: common_header.h
include/warm_wind/cv/: image_process.h  pose.h  visualization.h
include/warm_wind/difference/: mat_difference.h  tensor_difference.h
include/warm_wind/io/: data_store.h  terminal_color_macro.h  variable_print_macro.h
include/warm_wind/time/: time_recorder_macro.h
include/warm_wind/types/: type.h
test/: CMakeLists.txt  test_data_store.cpp  test_image_process.cpp  test_mat_difference.cpp  test_pose.cpp  test_tensor_difference.cpp  test_terminal_print.cpp  test_time_recorder.cpp  test_types.cpp  test_visualization.cpp
